--- a/metrics-demo232/pom.xml
+++ b/metrics-demo232/pom.xml
@@ -50,6 +50,12 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.lyh200</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-apollo</artifactId>
+            <version>1.0.7</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>metrics-demo-232</finalName>
