--- a/metrics-demo232/src/main/resources/application.yml
+++ b/metrics-demo232/src/main/resources/application.yml
@@ -1,6 +1,5 @@
-spring:
-  application:
-    name: metric-232
+#spring:
+
 
 server:
   port: 9998
@@ -18,4 +17,24 @@ management:
   metrics:
     tags:
       application: ${spring.application.name}
+
+
+spring:
+  application:
+    name: metric-232
+  profiles:
+    active: dev
+logging:
+  level:
+    #root: DEBUG
+    com.alibaba.nacos.client.config.impl: WARN
+
+apollo:
+  bootstrap:
+    enabled: true
+    namespaces: dynamic-tp-apollo-demo-dtp.yml
+  meta: http://localhost:8080
+  config-service: http://localhost:8080
+app:
+  id: dynamic-tp-apollo-demo
 
