--- a/metrics-demo158/pom.xml
+++ b/metrics-demo158/pom.xml
@@ -15,6 +15,7 @@
         <spring-boot.version>1.5.8.RELEASE</spring-boot.version>
         <hutool-all.version>5.7.21</hutool-all.version>
         <prometheus.verion>1.1.3</prometheus.verion>
+        <prometheus-bootclient.version>0.8.1</prometheus-bootclient.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -28,6 +29,39 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/io.prometheus/simpleclient_spring_boot &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>io.prometheus</groupId>-->
+<!--            <artifactId>simpleclient_spring_boot</artifactId>-->
+<!--            <version>${prometheus-bootclient.version}</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; The client &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>io.prometheus</groupId>-->
+<!--            <artifactId>simpleclient</artifactId>-->
+<!--            <version>0.16.0</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; Hotspot JVM metrics&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>io.prometheus</groupId>-->
+<!--            <artifactId>simpleclient_hotspot</artifactId>-->
+<!--            <version>0.16.0</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; Exposition HTTPServer&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>io.prometheus</groupId>-->
+<!--            <artifactId>simpleclient_httpserver</artifactId>-->
+<!--            <version>0.16.0</version>-->
+<!--        </dependency>-->
+        <!-- Pushgateway exposition-->
+<!--        <dependency>-->
+<!--            <groupId>io.prometheus</groupId>-->
+<!--            <artifactId>simpleclient_pushgateway</artifactId>-->
+<!--            <version>0.16.0</version>-->
+<!--        </dependency>-->
+<!--        -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -65,7 +99,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.metrics.MetricsDemoApp</mainClass>
+                    <mainClass>com.metrics.MetricsDemoApp158</mainClass>
                     <addResources>false</addResources>
                     <executable>true</executable>
                 </configuration>
