--- a/metrics-demo158/src/main/resources/application.yml
+++ b/metrics-demo158/src/main/resources/application.yml
@@ -1,15 +1,25 @@
-#暴露端口9999（此端口需不同于rest端口），如端口冲突可更换,也可以不单独配置端口，那么访问的和rest访问同一个端口
+##暴露端口9999（此端口需不同于rest端口），如端口冲突可更换,也可以不单独配置端口，那么访问的和rest访问同一个端口
 management:
   security:
     enabled: false
   port: 9999
-#所有端点关闭，只开放prometheus端点
+#
+##所有端点关闭，只开放prometheus端点
 endpoints:
-  enabled: false
+  enabled: true
   prometheus:
     enabled: true
 server:
   port: 8989
-
+spring:
+  application:
+    name: metrics-boot158
 
 # http://127.0.0.1:9999/prometheus
+#endpoints:
+#  prometheus:
+#    id: metrics
+#  metrics:
+#    id: springmetrics
+#    sensitive: false
+#    enabled: true
