--- a/metrics-demo158/pom.xml
+++ b/metrics-demo158/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <spring-boot.version>1.5.8.RELEASE</spring-boot.version>
+        <spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
         <hutool-all.version>5.7.21</hutool-all.version>
         <prometheus.verion>1.1.3</prometheus.verion>
         <prometheus-bootclient.version>0.8.1</prometheus-bootclient.version>
@@ -26,10 +27,27 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
-
+        <dependency>
+            <groupId>com.sohu</groupId>
+            <artifactId>hudong-metrics</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!--cloud组件 start -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
+        <!--cloud组件 end -->
 <!--        &lt;!&ndash; https://mvnrepository.com/artifact/io.prometheus/simpleclient_spring_boot &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>io.prometheus</groupId>-->
