--- a/metrics-demo158/pom.xml
+++ b/metrics-demo158/pom.xml
@@ -37,11 +37,11 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>com.sohu</groupId>
-            <artifactId>hudong-metrics</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.sohu</groupId>-->
+<!--            <artifactId>hudong-metrics</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <!--cloud组件 start -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
