--- a/metrics-demo158/pom.xml
+++ b/metrics-demo158/pom.xml
@@ -37,6 +37,11 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>org.xd</groupId>
+            <artifactId>xd-metrics</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.sohu</groupId>-->
 <!--            <artifactId>hudong-metrics</artifactId>-->
