--- a/metrics-demo158/src/main/resources/application.yml
+++ b/metrics-demo158/src/main/resources/application.yml
@@ -24,7 +24,12 @@ eureka:
       # 设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址
       # 单机
       defaultZone: http://eureka7001.com:7001/eureka/
-      # 相互注册
+  instance:
+    metadata-map:
+      "prometheus.scrape": "true"
+      "prometheus.path": "/prometheus"
+      "prometheus.port": "9999"
+  # 相互注册
 #      defaultZone: http://eureka7002.com:7002/eureka/
 # http://127.0.0.1:9999/prometheus
 #endpoints:
